# rust_auth_server

./: Cargo.toml  README.md
src/: main.rs
src/routes/: mod.rs
