[package]
name = "mserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid" ] }
listenfd = "0.3.3"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
uuid = { version = "0.8", features = [ "v4" ]}
jsonwebtoken = "7"
rand = "0.7"
rust-argon2 = "0.8"
